--- a/compare_achievements.css
+++ b/compare_achievements.css
@@ -128,6 +128,8 @@ div.closer:active {
 	text-align: left;
 	margin: 10px auto 3px;
 	-webkit-box-shadow: rgba(0,0,0,0.1) 1px 1px 2px;
+	height: 16px;
+	overflow: hidden;
 }
 
 .game td {
